--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,21 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+solc_version = "0.8.25"
+evm_version = "cancun"
+optimizer_runs = 800
+via_ir = false
+ffi = true
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+
+[fmt]
+  bracket_spacing = false
+  int_types = "long"
+  line_length = 120
+  multiline_func_header = 'attributes_first'
+  single_line_statement_blocks = 'preserve'
+  quote_style = "double"
+  tab_width = 4
+  wrap_comments = false
+  ignore = ["contracts/memeland/**/*.sol"]
